perf(seo): tuning image with specific size and format

--- a/src/content/blog/003.vuejs-ref-vs-reactive-and-which-one-should-i-use.md
+++ b/src/content/blog/003.vuejs-ref-vs-reactive-and-which-one-should-i-use.md
@@ -1,12 +1,13 @@
 ---
 title: "Vue.js: Ref vs Reactive and Which One Should I Use?"
 description: "Discover the key differences between ref and reactive in Vue.js. Learn which approach suits your project best and why. Read more now!"
-image: https://images.unsplash.com/photo-1640158615573-cd28feb1bf4e?fit=crop&w=800&h=418
+image: https://images.unsplash.com/photo-1640158615573-cd28feb1bf4e?fit=crop&w=800&h=418&fm=avif
+imageThumbnail: https://images.unsplash.com/photo-1640158615573-cd28feb1bf4e?fit=crop&w=80&h=80&fm=avif
 date: "2024-07-02T08:22:26+07:00"
 lastUpdate: "2025-03-17T13:00:00+07:00"
 ---
 
-![Vue.js: Ref vs Reactive and Which One Should I Use?](https://images.unsplash.com/photo-1640158615573-cd28feb1bf4e?fit=crop&w=800&h=418 "Vue.js: Ref vs Reactive and Which One Should I Use?")
+![Vue.js: Ref vs Reactive and Which One Should I Use?](https://images.unsplash.com/photo-1640158615573-cd28feb1bf4e?fit=crop&w=800&h=418&fm=avif "Vue.js: Ref vs Reactive and Which One Should I Use?")
 
 When diving into Vue.js 3, one of the first things you’ll encounter is the Composition API. It's a game-changer, bringing new ways to handle reactivity in your components. Two of the core tools you’ll use are `ref` and `reactive`. But what’s the difference? When should you use one over the other? Let’s break it down.
 
