--- a/src/content/blog/001.how-i-setup-my-pc-for-programming-use.md
+++ b/src/content/blog/001.how-i-setup-my-pc-for-programming-use.md
@@ -1,12 +1,13 @@
 ---
 title: "How I setup my pc for programming use"
 description: "Discover how to set up your Manjaro Linux system for programming. Follow this guide to install essential software and configure your development environment."
-image: https://images.unsplash.com/photo-1587620962725-abab7fe55159?fit=crop&w=800&h=418
+image: https://images.unsplash.com/photo-1587620962725-abab7fe55159?fit=crop&w=800&h=418&fm=avif
+imageThumbnail: https://images.unsplash.com/photo-1587620962725-abab7fe55159?fit=crop&w=80&h=80&fm=avif
 date: "2020-05-28T15:59:18+07:00"
 lastUpdate: "2025-03-17T13:00:00+07:00"
 ---
 
-![How I setup my pc for programming use](https://images.unsplash.com/photo-1587620962725-abab7fe55159?fit=crop&w=800&h=418 "How I setup my pc for programming use")
+![How I setup my pc for programming use](https://images.unsplash.com/photo-1587620962725-abab7fe55159?fit=crop&w=800&h=418&fm=avif "How I setup my pc for programming use")
 
 Ok, in this post i will share how i setup my Manjaro system as my programming daily driver. Manjaro is a free and open-source Linux distribution based on the Arch Linux operating system so installing software can be done with AUR repository. In this setup i use XFCE desktop environtment, you can download from [here](https://manjaro.org/download/official/xfce/)
 
